Fix overflow-x issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,8 @@ body {
 
     width: 100vw;
     min-height: 100vh;
+
+    overflow-x: hidden;
 }
 
 .cover {
